# data-gen

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
data_gen/: __init__.py  config.py  exceptions.py  logging.py
data_gen/generators/: __init__.py  address.py  base.py  pool.py
data_gen/generators/financial/: __init__.py  account.py  credit_card.py  customer.py  loan.py  patterns.py  stock.py  transaction.py
data_gen/models/: __init__.py  base.py
data_gen/models/financial/: __init__.py  account.py  credit_card.py  customer.py  enums.py  loan.py  property.py  stock.py  transaction.py
data_gen/scenarios/: __init__.py
data_gen/scenarios/financial/: __init__.py  customer_360.py  fraud_detection.py  loan_portfolio.py
data_gen/sinks/: __init__.py  console.py  json_file.py  kafka.py  postgres.py  serialization.py
data_gen/store/: __init__.py  financial.py
docker/: docker-compose.oss-kafka.yml  docker-compose.yml
docker/config/: prometheus-generated.yml
docs/: README.md  data-catalog.md  data-ingestion.md  docker.md  roadmap-v2.md  windows-setup.md
scripts/: benchmark.py  generate_sample_data.py  load_data.py  load_data_parallel.py
tests/: __init__.py  conftest.py  test_address_factory.py  test_config_logging.py  test_exceptions.py  test_generators.py  test_generators_full.py  test_models.py  test_scenarios.py  test_scenarios_full.py  test_serialization.py  test_sinks.py  test_store.py
